--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,6 +2,6 @@
   <ul>
     <li><%= link_to "Home", root_path %></li>
     <% if !user_signed_in? %><%= link_to "Sign In", new_user_session_path %>
-    <% else %><%= link_to "Sign Out", destroy_user_session_path %><% end %>
+    <% else %><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %><% end %>
   </ul>
 </div>
