can view emails on index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,8 @@ Home is here.
   <% if @emails.nil? %>
     "No emails!"
   <% else %>
-    <% if @email.count == 1 %>
-      <%= @email.data %>
+    <% if @emails.count == 1 %>
+      <%= @emails.data %>
     <% else %>
       <% @emails.each do |e| %>
         <p><%= e.data %></p>
