--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,124 @@
-Home is here. 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</head>
+<style>
+h2{
 
-<% if user_signed_in? %>
-  Email: <%= current_user.email %>
+}
+body {
+    
+     
+  }
+div.col-md-1{
+padding-top:5%;
+}
+div.col-md-2{
+padding-top:5%;
+
+}
+div.col-md-9{
+
+padding-top:15%;
+
+ /* Email: <%= current_user.email %>
   Username: <%= current_user.username %>
   Firstname: <%= current_user.firstname %>
+*/
+
+</style>
+
+<body >
+
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Securemail</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort by
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Unread</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Alphabetical</a></li> 
+          </ul>
+        
+        </li>
+        <li><a href="#">Compose Message</a></li> 
+        
+      </ul>
+       <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
+
+<div class="row">
+<div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
+      <table class="table table-hover";>
+    <thead>
+      <tr>
+        <th>Contact</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <tr class="success">
+        <td>John</td>
+        <td>jtouchdown@knights.ucf.edu</td>
+      </tr>
+        <% if user_signed_in? %>
 
   emails: 
   <% if @emails.nil? %>
-    "No emails!"
+   <tr class="warning"> <td>"No emails!"</td></tr>
   <% else %>
-    <% if @emails.count == 1 %>
-      <%= @emails.data %>
-    <% else %>
       <% @emails.each do |e| %>
-        <p><%= e.data %></p>
-      <% end %>
+      <tr class="success"> <td><%= e.data %></td></tr>
+        
     <% end %>
   <% end %>
 
 <% end %>
+    </tbody>
+  </table>
+    </div>
+   
+<div class="col-md-3">
+</div>
+    <div class="col-md-9" style="height:1000px;width:750px;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
+    
+
+v=e
+  emails: 
+  <% if @emails.nil? %>
+    "No email selected!"
+  <% else %>
+    
+      
+        <p><%= v.data %></p>
+    
+    <% end %>
+
+<% end %>
+
+
+    </div>
+
+</body>
+</html>
