--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,42 @@
 
-<head><h2>Current User: </h2>
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Securemail</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort by
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Unread</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Alphabetical</a></li> 
+          </ul>
+        
+        </li>
+        <li><a href="#">Compose Message</a></li> 
+        
+      </ul>
+       <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<h3>Current User: </h3>
 <% if user_signed_in? %>
-  Email: <%= current_user.email %>
-  Username: <%= current_user.username %>
+  Email: <%= current_user.email %><br>
+  Username: <%= current_user.username %><br>
   Firstname: <%= current_user.firstname %>
-</head>
-<body>
+
   emails: 
   <% if @emails.nil? %>
     "No emails!"
@@ -14,10 +45,9 @@
       <%= @emails.data %>
     <% else %>
       <% @emails.each do |e| %>
-        <p>Email from:<%=e.from_user%><br><%= e.data %></p>
+        <p>Email from: <%=e.from_user%><br><%= e.data %></p>
       <% end %>
     <% end %>
   <% end %>
 
 <% end %>
-</body>
