--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,17 +11,9 @@
     <div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort by
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Unread</a></li>
-            <li><a href="#">New</a></li>
-            <li><a href="#">Alphabetical</a></li> 
-          </ul>
-        
-        </li>
-        <li><a href="#">Compose Message</a></li> 
+        <li><a href="#">Contacts</a></li>
+        <li><a href="#">Spam</a></li>
+        <li><a href="/emails/new">Compose Message</a></li> 
         
       </ul>
        <ul class="nav navbar-nav navbar-right">
