--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,26 +28,8 @@
     </div>
   </div>
 </nav>
-<h3>Current User: </h3>
-<% if user_signed_in? %>
-  Email: <%= current_user.email %><br>
-  Username: <%= current_user.username %><br>
-  Firstname: <%= current_user.firstname %>
 
-  emails: 
-  <% if @emails.nil? %>
-    "No emails!"
-  <% else %>
-    <% if @emails.count == 1 %>
-      <%= @emails.data %>
-    <% else %>
-      <% @emails.each do |e| %>
-        <p>Email from: <%=e.from_user%><br><%= e.data %></p>
-      <% end %>
-    <% end %>
-  <% end %>
-
-<% end %>
+  
 <div class="row">
 <div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
       <table class="table table-hover";>
@@ -64,127 +46,24 @@
         <td>jtouchdown@knights.ucf.edu</td>
       </tr>
       <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
         <tr class="danger">
         <td>July</td>
         <td>hottestmonth@knights.ucf.edu</td>
       </tr>
-<tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="danger">
-        <td>July</td>
-        <td>hottestmonth@knights.ucf.edu</td>
-      </tr>
-      <tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr><tr>
-        <tr class="success">
-        <td>Mary</td>
-        <td>sweetmothamary@knights.ucf.edu</td>
-      </tr>
+      <% if @emails.nil? %>
+    "No emails!"
+  <% else %>
+    <% if @emails.count == 1 %>
+      <%= %> <%= @emails.data %>
+    <% else %>
+      <% @emails.reverse %>
+      <% @emails.each do |e| %>
+        <td><%=e.from_user%></td>  <td><%= e.created_at %></td>
+      <% end %>
+    <% end %>
+  <% end %>
+
+<% end %>
     </tbody>
   </table>
     </div>
