--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,16 +22,15 @@
         
       </ul>
        <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        <li><a href="/users/edit/3"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
+        <li><a href="/users/sign_up"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
   
 <div class="row">
-  <div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;margin-top:100px">
+  <div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
         <table class="table table-hover";>
       <thead>
         <tr>
