Missing emails.from_user

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
 
           <% else %>
             <% if @emails.count == 1 %>
-              <%= %> <%= @emails.data %>
+              <%= @emails.from_user %> <%= @emails.data %>
             <% else %>
               <% @emails.reverse %>
               <% @emails.each do |e| %>
