--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,22 +15,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <tr class="success">
-          <td>John</td>
-          <td>jtouchdown@knights.ucf.edu</td>
-        </tr>
-        <tr>
-          <tr class="danger">
-          <td>July</td>
-          <td>hottestmonth@knights.ucf.edu</td>
-        </tr>
         <% if @emails.nil? %>
           "No emails!"
 
           <% else %>
             <% if @emails.count == 1 %>
-              <%= @emails.from_user %> <%= @emails.data %>
+              <tr>
+                <% if @emails.read == 1 %>
+                  <tr class="success">
+                  <% else %>
+                  <tr class="danger">
+                  <% end %>
+                <td><%=emails.from_user%></td>  <td><%= emails.created_at %></td>
+              </tr>
             <% else %>
               <% @emails.reverse %>
               <% @emails.each do |e| %>
