--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,3 @@
-<% @contacts.each do |e| %>
-  <%= e.contact %>
+<% @all_contacts.each do |e| %>
+  <%= "#{e.firstname} #{e.lastname}" %>
 <% end %>
