fixed nav again

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,14 +9,14 @@
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><%= link_to "Home", root_path %></li>
         <li><a href="/contacts">Contacts</a></li>
         <li><a href="/emails/spam">Spam</a></li>
         <li><a href="/emails/new">Compose Message</a></li> 
         
       </ul>
        <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
+        <li><%= link_to "Settings", edit_registration_path(current_user) %></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
       </ul>
