--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,12 +19,13 @@
           "No emails!"
 
           <% else %>
-              <% @emails.reverse %>
+              <% @emails.sort_by { |h| h[:updated_at] } %>
               <% @emails.each do |e| %>
               <tr>
                 <td><%=e.from_user%></td>  <td><%= e.created_at %></td>
               </tr>
           <% end %>
+        <% end %>
       </tbody>
     </table>
       </div>
