--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -7,9 +7,12 @@
 <script language="Javascript" src="http://localhost:3000/PGpubkey.js" type="text/javascript"></script>
 
 <script language="Javascript" type="text/javascript">
-	window.onload = function() {
+	/*window.onload = function() {
 		document.getElementById("new_email").commit.disabled = true;
-	};
+	};*/
+  $( document ).ready(function() {
+    document.getElementById("new_email").commit.disabled = true;
+  });
 </script>
 
 <script language="Javascript" type="text/javascript">
