--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 
 <script language="Javascript" type="text/Javascript">
-  window.onload = function(){
+  $( document ).ready(function(){
     $(".jumbotron").attr('class', 'newClass');
-  }
+  });
 </script>
   
 <div class="row">
