--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
 </script>
   
 <div class="row">
-  <div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
-        <table class="table table-hover";>
+  <div class="col-md-2" data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
+        <table class="table table-hover">
       <thead>
         <tr>
           <th>Contact</th>
