--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,3 @@
-
-<script language="Javascript" type="text/Javascript">
-  window.onload = function(){
-    $(".jumbotron").attr('class', 'newClass');
-  }
-</script>
-  
 <div class="row">
   <div class="col-md-2"; data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
         <table class="table table-hover";>
@@ -19,7 +12,7 @@
           "No emails!"
 
           <% else %>
-              <% @emails = @emails.sort_by { |h| h[:updated_at] } %>
+              <% @emails = @emails.reverse %>
               <% @emails.each do |e| %>
               <tr>
                 <% if e.read ==1 %>
