created static email

--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,1 +1,16 @@
-<%= @email.data %>
+<%#= @email.data %>
+Email: <br>
+<div id="email_data">
+  -----BEGIN PGP MESSAGE-----
+Version: haneWIN JavascriptPG v2.0
+
+hQEMA5lwtTdjzvAuAQgAh7hyClxuNrjsetUeqMSn4g9dwLxWTfwd/A2mndsi
+ZhdzBXhxVNMIw20zvJJctbARN8e81rbEmMQxhA5nwvpOD4+kplPvFlI4Vf8B
+TgaogwIQghRlvDqmdfFUqfqjoAngje0+kNspGWOLIkmgG/epeGMqhM0Z2kDY
+aKPGBxBLGkp7k1ftkzk4uOCwN3ZJYv+tQ3g7BLcNQkikDeXZloovZHU1kc57
++VOFw+GmXQPXex4VOUEzk0NdtJPWSJkYO6hqLHxKZArjDgy1y6WQR6VT5L2h
+gOobsqHP/t6LTljjnXXp4z4edkZJEjS6Q+ZQzynB8DymJxn8VrXjpuUewbMB
+OaQkIylJxpYN0DcbYAu3IVRziFdk8VXRpyjkXd3Z3nqKetuempj3
+=FojO
+-----END PGP MESSAGE-----
+</div>
