--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
         
       </ul>
        <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Settings", edit_registration_path(current_user) %></li>
+        <li><% if user_signed_in? %><%= link_to "Settings", edit_registration_path(current_user) %><% end %></li>
         <li><%= link_to "Login", new_user_session_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
       </ul>
