--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,16 +1,58 @@
-<%#= @email.data %>
-Email: <br>
-<div id="email_data">
-  -----BEGIN PGP MESSAGE-----
-Version: haneWIN JavascriptPG v2.0
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/rsa.js" type="text/javascript"></script>
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/aes-enc.js" type="text/javascript"></script>
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/base64.js" type="text/javascript"></script>
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/sha1.js" type="text/javascript"></script>
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/cast5.js" type="text/javascript"></script>
+<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/PGdecode.js" type="text/javascript"></script>
+<script language="Javascript" type="text/javascript">
 
-hQEMA5lwtTdjzvAuAQgAh7hyClxuNrjsetUeqMSn4g9dwLxWTfwd/A2mndsi
-ZhdzBXhxVNMIw20zvJJctbARN8e81rbEmMQxhA5nwvpOD4+kplPvFlI4Vf8B
-TgaogwIQghRlvDqmdfFUqfqjoAngje0+kNspGWOLIkmgG/epeGMqhM0Z2kDY
-aKPGBxBLGkp7k1ftkzk4uOCwN3ZJYv+tQ3g7BLcNQkikDeXZloovZHU1kc57
-+VOFw+GmXQPXex4VOUEzk0NdtJPWSJkYO6hqLHxKZArjDgy1y6WQR6VT5L2h
-gOobsqHP/t6LTljjnXXp4z4edkZJEjS6Q+ZQzynB8DymJxn8VrXjpuUewbMB
-OaQkIylJxpYN0DcbYAu3IVRziFdk8VXRpyjkXd3Z3nqKetuempj3
-=FojO
+    var keytyp = 0;
+
+    var privKey = '-----BEGIN PGP PRIVATE KEY BLOCK-----\nVersion: BCPG C# v1.6.1.0\n\nlQOsBFZflCQBCACaDficvmrymWpi4UJDXsxapXxE0kezoXCNnJ56LbTxyjYq6oQX\nCoZV/NOW3eD16PESriESzHIM/1cEEv8qNBfudZSsPXBYz4VmjEe09uWChqdisW1W\n4xktri3czmw3Ee9B2yoru7r70xSSDR7YuoJEGd3H3nObeF4iloNsUIeXmTowFOzI\nDZEz0ZH4cvauzqZusyUudPgWdsamTicwSEcJHLeOKD+71BvN9cO0hTBPME2dC08x\nNAfW7+jkQWCgFT1RZNmhd+q22KHmh7G9l5wjWst9KGlnfoRAbxpwGL3hoxWmSG7i\n26mRA0mJpZdIM4BblL4hKbyeajWLe0fTOj3nABEBAAH/AwMCxl5L8raFk7xgmZBc\nbc18RuUnxyDnxP7QR6lnecO12YtfBqyEK3SQcYMLNLFuDeEtgTkln7tJNAoMZVjT\n1s5gFHhz82/z0I5yIL3/sherhDAWANRQGAJDEAfCV4YiTkbwS3U9YY1tCmxLW2CZ\n0JnUqHBsDFFDYLbk6F+60c7EqYBwwwJleVy/fSOqGu3QEP6AUJ1VGla24bwZgxtv\n2k9biqmmEIQ/5Dx6isvjERXEBbO/2C4jGQcN6mBaIAqvXA95q8plX/EJ6YorA+4Y\nwJQrpQ6GM3wRbO8i44M0rqxuEv3Ei0IVoAONU41NVQ7mVOYGjmH/ATDgjoh9yP28\n2rIgDIVqjpUTaEAVh/eyIJnSZ5AILPgd6WnKfo3D01ICEFItgL7Xl1a6se0vGUWv\nYgUF2cDBVca2ZbS97QKXfVLK9j+sw8d9M8+4EusvjWxMKX0DZxnwC8ha5i0+CGk/\nknftqCWbyQVQXwLl6vB+kcUwx9q6vvKjO7Y4IfEIXtuqg7DVlbCkfVrBOd5ShKV3\ndgjaYDKlfFSCbi5JA6Gi2o1ER1zP5bwl2KnOzWZiZzUNn0chkm9Z+ynXWaLgcElf\nRbOOLLb/XbiX5N9QNt1IWN4W0cTPi3SHq+D3nVZQxxokP+vpVIMBp/h671CZi+pI\n5jhu3NAp7+gpO5lDjzHi+XWBb52bqEBsRs8P1BUqGIVrxJR5c6lLRIpBLokoaK1x\nSLKpqnw7ftix64d+h4sRmoK/kidcLNvPxElbfWAdg+pITKyjWe0Kid43kZ8nJ7lS\nHV3+YOugwvUfz1ex4DkeYj18PBIVOadUS67IIIOtTWtDC+9geRXproR/U+lNuRob\nqu2uGPLHiT6oKiG0/tMZFjSDU3AhFYs4Aj3hgRpBW7QldXNlcjFAc2FsdHktZGVw\ndGhzLTg5MDUuaGVyb2t1YXBwLmNvbYkBHAQQAQIABgUCVl+UJAAKCRCZcLU3Y87w\nLlCPB/oCMekFtu2G89hQsa3NnWTVXmuWDAyzMxLvDlcWe9Xo2fDvCa+vPtMJK/8G\nOuFV7EYAXKxj99Y0K/ZsPZKCG4zH/aKe/feLlkF0hJl9QvVrWblSJc7lnFvLWRlx\nMgcoac4EQAgTERw8miFZwO9wSX1PoQe+EUcdPEwSYlIOHaBU5fTuR56Z8YPUMHA7\nZMumsQynOb0Pmevi7jHKpqqF5V9PKDnnG85K+yHz5aNUqE3DHoCmI+a9/qzirABI\nrmnSfAjnhXELxl82zti0fUI/ngZlZVcdmEaDfdrLQs1IHQXf3LYiwo3v2BGM6qaG\nP28eyj7C7Vo7kj3RAMYmrO0IxTEQ\n=kxWK\n-----END PGP PRIVATE KEY BLOCK-----';
+
+    function load()
+    {
+    	;
+    }
+
+    var dk = [];
+    var pk = [];
+    var qk = [];
+    var uk = [];
+    var seskey = '';
+    var pass;
+
+    function decrypt()
+    {
+      var encoded_message = document.frm.msg.value;
+      //console.log($('#email_data').text());
+
+      doDecrypt(pk, qk, dk, uk, privKey, '');
+
+      document.frm.msg.value = doDecrypt(pk, qk, dk, uk, encoded_message, '');
+    }
+
+</script>
+
+
+<%#= @email.data %>
+Message: <br>
+<form name="frm">
+<textarea name="msg" rows=10 cols=80>
+-----BEGIN PGP MESSAGE-----&#13;
+Version: haneWIN JavascriptPG v2.0&#13;
+&#13;
+hQEMA5lwtTdjzvAuAQf7BfJ8XPqiQl+UoYjbuYq0OcV/+lcH5rJSkgQpsJeb&#13;
+EiwWSatir9TGfaW83omNO6JN94kCq+4C8R7b4wS6CCIxi4IzguFS65F3LyzC&#13;
+Tx7+hKkK0do9yN7dZ+by1VrKAGWatO0+LOhAsvMpoCq7tswxF9SxCNlbu6ul&#13;
+q55Dyt70w1hn0We7UzuJgAf9Kx0QWv0nDs4c31v1TdS6SGJqfDTNqfJjT8a/&#13;
+l0jNk2e8vynoK9A0Fcwv2gelyrVS/BZuU0Xx8JBNuCIo1U37lDUQEd9VhHqY&#13;
+SOXNfwN5vDfxVWe8WcMhEm+X2sgluqGEmRVEWSOXOQzfbYWigGrlXpFLCzYD&#13;
+e6Qt0CmvTmYivqnVzF3cOPXeAmxTWB3LIrZbA9ngY4X+Pd5hZXP81ZieX24O&#13;
+myrd&#13;
+=Kj/k&#13;
 -----END PGP MESSAGE-----
-</div>
+</textarea><br>
+</form>
+
+<button onClick="javascript:decrypt();" id="encrypt">Decrypt</button>
