--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,10 +1,10 @@
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/rsa.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/aes-enc.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/base64.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/mouse.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/PGencode.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/sha1.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/PGpubkey.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/rsa.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/aes-enc.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/base64.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/mouse.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/PGencode.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/sha1.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/PGpubkey.js" type="text/javascript"></script>
 
 <script language="Javascript" type="text/javascript">
   $( document ).ready(function() {
