--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,9 +1,9 @@
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/rsa.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/aes-enc.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/base64.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/sha1.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/cast5.js" type="text/javascript"></script>
-<script language="Javascript" src="http://salty-depths-8905.herokuapp.com/PGdecode.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/rsa.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/aes-enc.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/base64.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/sha1.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/cast5.js" type="text/javascript"></script>
+<script language="Javascript" src="https://salty-depths-8905.herokuapp.com/PGdecode.js" type="text/javascript"></script>
 <script language="Javascript" type="text/javascript">
 
     var keytyp = 0;
