--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,9 +20,8 @@
                 <% else %>
                     <tr class="success">
                 <% end %>
-                
-                <td><%=e.from_user%></td>  <td><%= e.created_at %></td> 
-             
+                <% @from_user = User.find(e.from_user) %>
+                <td><%= "#{@from_user.firstname} #{@from_user.lastname}" %></td>  <td><%= e.created_at %></td> 
              
               </tr>
             
