--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
                     <tr class="success">
                 <% end %>
                 <% @from_user = User.find(e.from_user) %>
-                <td><%= "#{@from_user.firstname} #{@from_user.lastname}" %></td>  <td><%= e.created_at %></td> 
+                <td><%= "#{@from_user.firstname} #{@from_user.lastname}" %></td>  <td><%= link_to e.created_at, "/emails/#{e.id}" %></td> 
              
               </tr>
             
