--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "Home", root_path %></li>
         <li><a href="/contacts">Contacts</a></li>
-        <li><a href="/emails/spam">Spam</a></li>
+        <li><a href="/spam">Spam</a></li>
         <li><a href="/emails/new">Compose Message</a></li> 
         
       </ul>
