--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,5 +33,6 @@
   <div class="col-md-3">
 </div>
 
+<% #get backlist to work, contacts remove list, decrypt stuff working, add exceptions, adding keys to database %>
     
               
