--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -36,6 +36,8 @@
 
 	    document.getElementById("new_email").commit.disabled = false;
 	    document.getElementById("encrypt").disabled = true;
+
+      $('#email_data').prop("disabled", true);
     }
 </script>
 
