--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -37,7 +37,7 @@
 	    document.getElementById("new_email").commit.disabled = false;
 	    document.getElementById("encrypt").disabled = true;
 
-      $('#email_data').prop("disabled", true);
+      //$('#email_data').prop("disabled", true);
     }
 </script>
 
