--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -42,16 +42,17 @@ Message: <br>
 -----BEGIN PGP MESSAGE-----&#13;
 Version: haneWIN JavascriptPG v2.0&#13;
 &#13;
-hQEMA5lwtTdjzvAuAQf7BfJ8XPqiQl+UoYjbuYq0OcV/+lcH5rJSkgQpsJeb&#13;
-EiwWSatir9TGfaW83omNO6JN94kCq+4C8R7b4wS6CCIxi4IzguFS65F3LyzC&#13;
-Tx7+hKkK0do9yN7dZ+by1VrKAGWatO0+LOhAsvMpoCq7tswxF9SxCNlbu6ul&#13;
-q55Dyt70w1hn0We7UzuJgAf9Kx0QWv0nDs4c31v1TdS6SGJqfDTNqfJjT8a/&#13;
-l0jNk2e8vynoK9A0Fcwv2gelyrVS/BZuU0Xx8JBNuCIo1U37lDUQEd9VhHqY&#13;
-SOXNfwN5vDfxVWe8WcMhEm+X2sgluqGEmRVEWSOXOQzfbYWigGrlXpFLCzYD&#13;
-e6Qt0CmvTmYivqnVzF3cOPXeAmxTWB3LIrZbA9ngY4X+Pd5hZXP81ZieX24O&#13;
-myrd&#13;
-=Kj/k&#13;
+hQEMA5lwtTdjzvAuAQgAg95kDt0gjLo9jaxabRQhDC5XkBaGxKhH/jw/0MkD&#13;
+wqg/uFtwVpH/XkUCGsHrrkpPCCZcwujg2HseQTVBPOiOUfBBtHhU+G7tMYhJ&#13;
+k8slLVl6+doNVF5hdI/WShADoPMxJt6QT5yLQHpWyusE6DuJI4eLrAaig+Ns&#13;
+ITU3hBOOmunRP/FuJiHYSJAEJEQgYaZRxThaSIBpLgcR+2vpHrWIr3bJ2QD6&#13;
+SaUpiJzgnEfTdvzqteUxcxzaZBgtxu5v0IzunlQvDszKe7HcnszzkrKz4Nus&#13;
+3Gyz2dVU/jYrW9OIjKa9qBe98UTbjhxyOG6X6U7Xtg5EKrDPi0ZRgU07LRzb&#13;
+l6Q4rxASU6jqiE5kvGoL531XQMINmJc+Q5bcb6h1DgF7Hr/zDTC3ot8MYh/L&#13;
+abR6+/a0AAhKz0VpHPs=&#13;
+=5CxV&#13;
 -----END PGP MESSAGE-----
+
 </textarea><br>
 </form>
 
