--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
+<script language="Javascript" type="text/javascript">
+
+  setTimeout(function(){
+    window.location.reload(1);
+}, 150000);
+
+</script>
+
+
 <div class="row">
   <div class="col-md-2" data-spy="affix"; style="height:100%;width:350px;overflow:auto;">
         <table class="table table-hover">
